--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "googleapis": "^62.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.6",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
